[tool.poetry]
name = "network-scanner"
version = "0.1.0"
description = ""
authors = ["Rob Marshall <rob@robmarshall.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.6.1"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
